[tool.poetry]
name = "python-class-decorator"
version = "0.1.0"
description = ""
authors = ["William D'Onofrio <16698591+wdonofrio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^7.0.2"
ipykernel = "^6.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
